recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	
	for(i<-5 to 0 by -1){
		 n=0;
	avance(n);
	gauche(90);
	n=n+3;
	}
	
}
